@@ -1,3 +1,9 @@
+2005-03-20 [holger]	0.2cvs8
+
+	* src/perl_plugin.c
+		On manual filtering, don't move message to inbox
+		during `abort'.
+
 2005-03-19 [holger]	0.2cvs7
 
 	* src/perl_plugin.c
